src/runtime-rs/vendor/actix-macros/tests/trybuild/test-05-system-expect-path.stderr
error: Expected path
 --> $DIR/test-05-system-expect-path.rs:1:27
  |
1 | #[actix_rt::test(system = "!@#*&")]
  |                           ^^^^^^^
