src/runtime-rs/vendor/actix-macros/tests/trybuild/test-05-system-expect-path.rs
#[actix_rt::test(system = "!@#*&")]
async fn my_test() {}

fn main() {}
